src/objects/Affordability__c.object
<CustomObject>
    <fields>
        <fullName>Are_tax_benefit_realized_monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are tax benefit realized monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_monthly_payment__c</fullName>
        <label>Future monthly payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_there_a_payment_plan_for_this_item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there a payment plan for this item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_yearly__c</fullName>
        <label>Maximum yearly tax deduction allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_due_this_month__c</fullName>
        <label>Payment due this month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rainy_Day_Fund_in_month__c</fullName>
        <label>Rainy Day Fund (in month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_benefit_with_intrest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax benefit with intrest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_do_you_want_to_purchase__c</fullName>
        <label>What do you want to purchase?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_of_contribution_bring_tax_benifit__c</fullName>
        <label>What %of contribution bring tax benefit?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Affordability</label>
    <nameField>
        <label>Affordability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affordabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>